--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <title>Homework 2</title>
 </head>
 <h1>This is a Mathematics Class.</h1>
+<h2>Before starting with the class, enter your UCID :</h2>
 </body>
 </html>
