added index file

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <h1>This is a Mathematics Class.</h1>
 <h2>Before starting with the class, enter your UCID :</h2>
 <p>My UCID is pg395.</p>
+<h3> OK, now we can start with our class.</h3>
 </body>
 </html>
