added index file

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <h2>Before starting with the class, enter your UCID :</h2>
 <p>My UCID is pg395.</p>
 <h3> OK, now we can start with our class.</h3>
+<b>We are going to learn the following things today.</b>
 </body>
 </html>
