added index file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <p>My UCID is pg395.</p>
 <h3> OK, now we can start with our class.</h3>
 <b>We are going to learn the following things today.</b>
+<ul type="disc">
+<li>Subscript</li>
+<li>Superscript</li>
+</ul>
 </body>
 </html>
