--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 <li>Subscript</li>
 <li>Superscript</li>
 </ul>
+<i>We are going to practice writting log a to the base 2 or log2a and the square of x or x2 using an html
+command </i>
 </body>
 </html>
