added index file

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 </ul>
 <i>We are going to practice writting log a to the base 2 or log2a and the square of x or x2 using an html
 command </i>
+<br>
+log<sub>2</sub>a
 </body>
 </html>
